--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,27 @@ html,
 body {
   height: 100%;
 }
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  overflow: visible;
+  background: rgb(0 0 0 / 0.6) url("images/load.gif") no-repeat center center;
+  background-size: 200px;
+  z-index: 1021;
+}
 #root {
   height: 100%;
   display: flex;
   flex-direction: column;
   display: flex;
+}
+.pointer {
+  cursor: pointer;
+}
+.hover:hover {
+  transform: scale(1.1);
 }
