--- a/src/components/Recommendations/Recommendation/Recommendation.css
+++ b/src/components/Recommendations/Recommendation/Recommendation.css
@@ -1,3 +1,17 @@
 .recommendation:hover {
   transform: scale(1.1);
 }
+.card {
+  border-radius: 20px !important;
+  border: none !important;
+  -webkit-box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.05) !important;
+  -moz-box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.05) !important;
+  box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.05) !important;
+}
+.card:hover{
+  box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.10) !important;
+  -webkit-box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.10) !important;
+  -moz-box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.10) !important;
+  transition: .5s all;
+  cursor: pointer;
+}
