Asunto: Redux & Login

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,8 @@ body {
   height: 100%;
   padding-top: 3rem;
 }
-.loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 1;
-  overflow: visible;
-  background: rgb(0 0 0 / 0.6) url("images/load.gif") no-repeat center center;
-  background-size: 600px;
-  z-index: 1031;
+body.swal2-height-auto {
+  height: 100% !important;
 }
 #root {
   height: 100%;
