--- a/src/components/Recommendations/Recommendation/Recommendation.css
+++ b/src/components/Recommendations/Recommendation/Recommendation.css
@@ -1,7 +1,7 @@
 .recommendation:hover {
   transform: scale(1.1);
 }
-.card {
+.card.recomendation {
   border-radius: 20px !important;
   border: none !important;
   -webkit-box-shadow: 10px 10px 24px -3px rgba(0,0,0,0.05) !important;
